feat : navbar, main, footer, aside

--- a/Landing Page/landingpage.html
+++ b/Landing Page/landingpage.html
@@ -1,7 +1,116 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+
+        <!--CSS-->
+        <link rel="stylesheet" href="style/style.css">
+
+        <!--Font-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Tinos&display=swap" rel="stylesheet">
+
+        <!--Icons-->
+        <link rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" 
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+        
     </head>
     <body>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Material List</a></li>
+                    <li><a href="#">Quizes</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div class="introduction">
+                <div class="introduction-desc">
+                    <h1 class="title">Matrix Mind</h1>
+                    <p>
+                        Aljabar linier adalah cabang matematika yang mempelajari sistem persamaan linear dan transformasi linear. 
+                        Dalam dunia IT, aljabar linier memiliki banyak aplikasi dan relevansi, termasuk:
+                    </p>
+                    <ul>
+                        <li>Grafika Komputer</li>
+                        <li>Machine Learning dan Data Science</li>
+                        <li>Jaringan Komputer</li>
+                        <li>Pemrosesan Citra</li>
+                    </ul>
+                    <p>
+                        Matrix Mind tidak hanya menyediakan materi-materi gratis, tetapi juga menyajikan sejumlah kuis dan latihan tambahan agar pengguna dapat menguasai dan memahami konsep-konsep yang telah mereka pelajari. 
+                        Materi-materi tersebut dirancang untuk memberikan pengalaman pembelajaran yang holistik dan interaktif.
+                    </p>
+                    <button>Lebih Lanjut</button>
+                </div>
+                <div class="introduction-image">
+                    <img src="img/logo.png" alt="Matrix Mind">
+                </div>
+            </div>
+            <div class="introduction-lanjut">
+                <h2>Berikut adalah Fitur yang Kami Tawarkan</h2>
+                <ol>
+                    <li>
+                        <h3>Materi Gratis</h3>
+                        <p>
+                            Matrix Mind menyediakan akses gratis ke berbagai materi pembelajaran yang mencakup berbagai topik. 
+                            Materi-materi ini dapat diakses kapan saja, memungkinkan pengguna untuk belajar sesuai dengan waktu dan kecepatan mereka sendiri.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>Kuis Interaktif</h3>
+                        <p>
+                            Selain materi, Matrix Mind menyediakan kuis interaktif untuk menguji pemahaman pengguna terhadap konsep-konsep yang telah dipelajari. 
+                            Kuis ini tidak hanya berfungsi sebagai alat evaluasi, tetapi berbekal penjelasan kuis ini dapat meningkatkan keterampilan untuk memcahkan masalah
+                        </p>
+                    </li>
+                    <li>
+                        <h3>Latihan Tambahan</h3>
+                        <p>
+                            Matrix Mind juga menawarkan berbagai latihan tambahan yang dirancang khusus untuk membantu pengguna dalam mengasah keterampilan mereka. 
+                            Latihan Latihan dapat berupa soal pilihan ganda maupun essay yang masing-masing soal terdapat pembahasannya
+                        </p>
+                    </li>
+                </ol>
+            </div>
+            <aside>
+                <div class="profile">
+                    <h3>About Developer</h3>
+                    <h4>Tjokorde Gde Agung Abel Putra</h4>
+                    <div class="dev-image">
+                        <img src="" alt="">
+                    </div>
+                    <p>
+                        Halo! Saya Abel, seorang mahasiswa Teknik Komputer di Universitas Indonesia. Sejak SMA, saya telah memiliki minat dalam pemrograman dan matematika.
+                        
+                        Keterlibatan saya dalam dunia IT tidak hanya terbatas pada perkuliahan, tetapi juga mencakup pengembangan situs web. 
+                        Saya menciptakan situs ini dengan tujuan khusus - Aljabar Linier.Melalui situs ini, 
+                        saya berharap dapat menyediakan konten yang bermanfaat bagi mahasiswa dan murid SMA yang sedang mempelajari materi Aljabar Linier, Vektor, dan Matriks.
+                    </p>
+                    <h4>Lets Connect</h4>
+                    <div class="social-media">
+                        <ul>
+                            <li>
+                                <i class="far fa-envelope"> abelputra101@gmail.com</i>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/tjokordegdeagungabelputra/"><i class="fab fa-linkedin"> LinkedIn</i></a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/Pathricc1234"><i class="fab fa-github"> Github</i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </aside>
+        </main>
+        <footer>
+            <p>Copyright © 2023, Tjokorde Gde Agung Abel Putra</p>
+        </footer>
     </body>
 </html>
