feat : navbar design

--- a/Landing Page/landingpage.html
+++ b/Landing Page/landingpage.html
@@ -16,15 +16,17 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" 
         crossorigin="anonymous" referrerpolicy="no-referrer">
-        
     </head>
     <body>
-        <header>
-            <nav>
+        <header class="navbar-container">
+            <div class="logo">
+                <img src="img/logo.png" alt="Matrix Mind">
+            </div>
+            <nav class="nav-list">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Material List</a></li>
-                    <li><a href="#">Quizes</a></li>
+                    <li><a href="landingpage.html">Home</a></li>
+                    <li><a href="#">Materials</a></li>
+                    <li><a href="#">Quiz</a></li>
                 </ul>
             </nav>
         </header>
