feat : main, aside, footbar design

--- a/Landing Page/landingpage.html
+++ b/Landing Page/landingpage.html
@@ -48,37 +48,36 @@
                         Matrix Mind tidak hanya menyediakan materi-materi gratis, tetapi juga menyajikan sejumlah kuis dan latihan tambahan agar pengguna dapat menguasai dan memahami konsep-konsep yang telah mereka pelajari. 
                         Materi-materi tersebut dirancang untuk memberikan pengalaman pembelajaran yang holistik dan interaktif.
                     </p>
-                    <button>Lebih Lanjut</button>
                 </div>
                 <div class="introduction-image">
                     <img src="img/logo.png" alt="Matrix Mind">
                 </div>
-            </div>
-            <div class="introduction-lanjut">
-                <h2>Berikut adalah Fitur yang Kami Tawarkan</h2>
-                <ol>
-                    <li>
-                        <h3>Materi Gratis</h3>
-                        <p>
-                            Matrix Mind menyediakan akses gratis ke berbagai materi pembelajaran yang mencakup berbagai topik. 
-                            Materi-materi ini dapat diakses kapan saja, memungkinkan pengguna untuk belajar sesuai dengan waktu dan kecepatan mereka sendiri.
-                        </p>
-                    </li>
-                    <li>
-                        <h3>Kuis Interaktif</h3>
-                        <p>
-                            Selain materi, Matrix Mind menyediakan kuis interaktif untuk menguji pemahaman pengguna terhadap konsep-konsep yang telah dipelajari. 
-                            Kuis ini tidak hanya berfungsi sebagai alat evaluasi, tetapi berbekal penjelasan kuis ini dapat meningkatkan keterampilan untuk memcahkan masalah
-                        </p>
-                    </li>
-                    <li>
-                        <h3>Latihan Tambahan</h3>
-                        <p>
-                            Matrix Mind juga menawarkan berbagai latihan tambahan yang dirancang khusus untuk membantu pengguna dalam mengasah keterampilan mereka. 
-                            Latihan Latihan dapat berupa soal pilihan ganda maupun essay yang masing-masing soal terdapat pembahasannya
-                        </p>
-                    </li>
-                </ol>
+                <div class="introduction-lanjut">
+                    <h2>Berikut adalah Fitur yang Kami Tawarkan</h2>
+                    <ol>
+                        <li>
+                            <h3>Materi Gratis</h3>
+                            <p>
+                                Matrix Mind menyediakan akses gratis ke berbagai materi pembelajaran yang mencakup berbagai topik. 
+                                Materi-materi ini dapat diakses kapan saja, memungkinkan pengguna untuk belajar sesuai dengan waktu dan kecepatan mereka sendiri.
+                            </p>
+                        </li>
+                        <li>
+                            <h3>Kuis Interaktif</h3>
+                            <p>
+                                Selain materi, Matrix Mind menyediakan kuis interaktif untuk menguji pemahaman pengguna terhadap konsep-konsep yang telah dipelajari. 
+                                Kuis ini tidak hanya berfungsi sebagai alat evaluasi, tetapi berbekal penjelasan kuis ini dapat meningkatkan keterampilan untuk memcahkan masalah
+                            </p>
+                        </li>
+                        <li>
+                            <h3>Latihan Tambahan</h3>
+                            <p>
+                                Matrix Mind juga menawarkan berbagai latihan tambahan yang dirancang khusus untuk membantu pengguna dalam mengasah keterampilan mereka. 
+                                Latihan Latihan dapat berupa soal pilihan ganda maupun essay yang masing-masing soal terdapat pembahasannya
+                            </p>
+                        </li>
+                    </ol>
+                </div>
             </div>
             <aside>
                 <div class="profile">
@@ -92,9 +91,9 @@
                         
                         Keterlibatan saya dalam dunia IT tidak hanya terbatas pada perkuliahan, tetapi juga mencakup pengembangan situs web. 
                         Saya menciptakan situs ini dengan tujuan khusus - Aljabar Linier.Melalui situs ini, 
-                        saya berharap dapat menyediakan konten yang bermanfaat bagi mahasiswa dan murid SMA yang sedang mempelajari materi Aljabar Linier, Vektor, dan Matriks.
+                        saya berharap dapat menyediakan konten yang bermanfaat bagi mahasiswa maupun murid SMA 
                     </p>
-                    <h4>Lets Connect</h4>
+                    <h4>Contact Me</h4>
                     <div class="social-media">
                         <ul>
                             <li>
