--- a/Landing Page/landingpage.html
+++ b/Landing Page/landingpage.html
@@ -25,7 +25,7 @@
             <nav class="nav-list">
                 <ul>
                     <li><a href="landingpage.html">Home</a></li>
-                    <li><a href="#">Materials</a></li>
+                    <li><a href="../Materi/Bab1/bab1.html">Materials</a></li>
                     <li><a href="#">Quiz</a></li>
                 </ul>
             </nav>
@@ -111,7 +111,7 @@
             </aside>
         </main>
         <footer>
-            <p>Copyright © 2023, Tjokorde Gde Agung Abel Putra</p>
+            <p>Copyright © 2024, Tjokorde Gde Agung Abel Putra</p>
         </footer>
     </body>
 </html>
