feat: bab1 design and landing page redesign

--- a/Landing Page/landingpage.html
+++ b/Landing Page/landingpage.html
@@ -31,7 +31,7 @@
             </nav>
         </header>
         <main>
-            <div class="introduction">
+            <article class="introduction">
                 <div class="introduction-desc">
                     <h1 class="title">Matrix Mind</h1>
                     <p>
@@ -78,20 +78,19 @@
                         </li>
                     </ol>
                 </div>
-            </div>
+            </article>
             <aside>
                 <div class="profile">
                     <h3>About Developer</h3>
                     <h4>Tjokorde Gde Agung Abel Putra</h4>
                     <div class="dev-image">
-                        <img src="" alt="">
+                        <img src="img/dev-img.jpg" alt="Dev Photo">
                     </div>
                     <p>
-                        Halo! Saya Abel, seorang mahasiswa Teknik Komputer di Universitas Indonesia. Sejak SMA, saya telah memiliki minat dalam pemrograman dan matematika.
+                        Halo! Saya Abel, seorang mahasiswa Teknik Komputer di Universitas Indonesia. Sejak SMA, saya telah memiliki minat dalam pemrograman dan matematika.<br>
                         
-                        Keterlibatan saya dalam dunia IT tidak hanya terbatas pada perkuliahan, tetapi juga mencakup pengembangan situs web. 
-                        Saya menciptakan situs ini dengan tujuan khusus - Aljabar Linier.Melalui situs ini, 
-                        saya berharap dapat menyediakan konten yang bermanfaat bagi mahasiswa maupun murid SMA 
+                        Keterlibatan saya dalam dunia IT tidak hanya terbatas pada perkuliahan, tetapi juga mencakup pengembangan situs web.<br>
+                        Saya menciptakan situs ini dengan tujuan khusus - Aljabar Linier.Melalui situs ini, saya berharap dapat menyediakan konten yang bermanfaat bagi mahasiswa maupun murid SMA.<br>
                     </p>
                     <h4>Contact Me</h4>
                     <div class="social-media">
