--- a/Materi/Bab1/bab1.html
+++ b/Materi/Bab1/bab1.html
@@ -37,152 +37,170 @@
                     </ul>
                 </div>
             </aside>
-            <h1 class="judul-bab">Eliminasi Gauss Jordan</h1>
-            <article class="intro-perlinier">
-                <h2>Persamaan Linier</h3>
-                <!--Apa Itu Persamaan Linier-->
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, quia sequi. Quos voluptates fugiat dolorum repellendus, accusamus alias deserunt quas sit voluptatum soluta impedit! Quos omnis ducimus explicabo? Recusandae, asperiores.
-                </p>
-                <!--Bentuk Dasar Persamaan Linier-->
-                <img src="" alt="Bentuk Dasar Persamaan Linier">
-                <!--Pengunaan Persamaan Linier-->
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, dignissimos. Aut voluptates dolorum molestias ratione dolor. Dolorem dignissimos iusto aperiam amet porro autem! Quaerat ipsam voluptatibus inventore consequatur, perferendis dicta.
-                </p>
-            </article>
-            <article class="penyelesaian-perlinier">
-                <h2>Mencari Solusi Persamaan Linier</h2>
-                <!--Beberapa Cara Penyelesaian-->
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus praesentium recusandae aut iure quo quae quidem nam asperiores, cum nostrum aperiam officiis provident nisi minus aliquid deleniti at nobis nulla!
-                </p>
-                <!--Gambar Contoh Soal-->
-                <img src="" alt="Example Problem">
-                <!--List dari Metode-->
-                <div class="solusi-eliminasi">
-                    <h3>Metode Eliminasi</h3>
-                    <!--Penjelasan Metode Eliminasi-->
+            <article class="main-article">
+                <h1 class="judul-bab">Eliminasi Gauss Jordan</h1>
+                <article class="intro-perlinier">
+                    <h2>Persamaan Linier</h3>
+                    <!--Apa Itu Persamaan Linier-->
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, temporibus possimus, sint quia impedit aut qui totam eligendi veniam quo, ipsam dolores excepturi minima obcaecati saepe consectetur repudiandae. Eaque, magnam.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, quia sequi. Quos voluptates fugiat dolorum repellendus, accusamus alias deserunt quas sit voluptatum soluta impedit! Quos omnis ducimus explicabo? Recusandae, asperiores.
                     </p>
-                    <!--Ilustrasi Metode Grafik-->
-                    <div class="ilustrasi-metode-eliminasi">
-                        <ul>
-                            <li>Menyamakan Koefisien</li>
-                            <li>Eliminasi</li>
-                            <li>Subtitusi</li>
-                        </ul>
-                        <!--Penjelasan Ilustrasi-->
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus dignissimos ea minus dolor perspiciatis nihil impedit in, itaque eum laborum quisquam aspernatur consequatur odit veritatis? Facilis iste dicta consequatur cumque.
-                        </p>
-                        <img src="" alt="Ilustrasi Metode Eliminasi">
+                    <div class="img">
+                        <!--Bentuk Dasar Persamaan Linier-->
+                        <img src="img/standard-form.png" alt="Bentuk Dasar Persamaan Linier">
                     </div>
-                </div>
-                <div class="solusi-grafik">
-                    <h3>Metode Grafik</h3>
-                    <!--Penjelasan Metode Grafik-->
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia suscipit quod beatae molestiae quidem eos labore voluptates in incidunt! Eligendi recusandae odio repudiandae, quibusdam vero nihil iste. Nobis, odio optio!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, dignissimos. Aut voluptates dolorum molestias ratione dolor. Dolorem dignissimos iusto aperiam amet porro autem! Quaerat ipsam voluptatibus inventore consequatur, perferendis dicta.
                     </p>
-                    <!--Ilustrasi Dari Metode Grafik-->
-                    <div class="ilustrasi-metode-grafik">
-                        <ul>
-                            <li>Mencari Titik Potong</li>
-                            <li>Membuat Grafik</li>
-                            <li>Mengimpretasikan Grafik</li>
-                        </ul>
-                        <!--Penjelasan Ilustrasi-->
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus minus! Quasi tenetur omnis, commodi voluptatibus porro cupiditate non. Consequatur placeat vero aperiam quam. Ratione voluptatum voluptas quaerat id obcaecati.
-                        </p>
-                        <img src="" alt="Ilustrasi Metode Grafik">
-                    </div>
-                </div>
-                <div class="solusi-gauss">
-                    <h3>Metode Gauss-Jordan</h3>
-                    <!--Pengenalan Metode Gauss Jordan-->
+                </article>
+                <article class="penyelesaian-perlinier">
+                    <h2>Mencari Solusi Persamaan Linier</h2>
+                    <!--Beberapa Cara Penyelesaian-->
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto omnis dolor molestiae aperiam repudiandae accusantium, iure quibusdam debitis suscipit similique eaque incidunt harum voluptatibus sit quis fuga minima quidem earum.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus praesentium recusandae aut iure quo quae quidem nam asperiores, cum nostrum aperiam officiis provident nisi minus aliquid deleniti at nobis nulla!
+                    </p>
+                    <!--Gambar Contoh Soal-->
+                    <div class="exp-img">
+                        <img src="" alt="Example Problem">
+                    </div>
+                    <!--List dari Metode-->
+                    <div class="solusi-eliminasi">
+                        <h3>Metode Eliminasi</h3>
+                        <!--Penjelasan Metode Eliminasi-->
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, temporibus possimus, sint quia impedit aut qui totam eligendi veniam quo, ipsam dolores excepturi minima obcaecati saepe consectetur repudiandae. Eaque, magnam.
+                        </p>
+                        <!--Ilustrasi Metode Grafik-->
+                        <div class="ilustrasi-metode-eliminasi">
+                            <ul>
+                                <li class="first">Menyamakan Koefisien</li>
+                                <li class="second">Eliminasi</li>
+                                <li class="third">Subtitusi</li>
+                            </ul>
+                            <!--Penjelasan Ilustrasi-->
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus dignissimos ea minus dolor perspiciatis nihil impedit in, itaque eum laborum quisquam aspernatur consequatur odit veritatis? Facilis iste dicta consequatur cumque.
+                            </p>
+                            <div class="ilus-img">
+                                <img src="" alt="Ilustrasi Metode Eliminasi">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solusi-grafik">
+                        <h3>Metode Grafik</h3>
+                        <!--Penjelasan Metode Grafik-->
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia suscipit quod beatae molestiae quidem eos labore voluptates in incidunt! Eligendi recusandae odio repudiandae, quibusdam vero nihil iste. Nobis, odio optio!
+                        </p>
+                        <!--Ilustrasi Dari Metode Grafik-->
+                        <div class="ilustrasi-metode-grafik">
+                            <ul>
+                                <li class="first">Mencari Titik Potong</li>
+                                <li class="second">Membuat Grafik</li>
+                                <li class="third">Mengimpretasikan Grafik</li>
+                            </ul>
+                            <!--Penjelasan Ilustrasi-->
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus minus! Quasi tenetur omnis, commodi voluptatibus porro cupiditate non. Consequatur placeat vero aperiam quam. Ratione voluptatum voluptas quaerat id obcaecati.
+                            </p>
+                            <div class="ilus-img">
+                                <img src="" alt="Ilustrasi Metode Grafik">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solusi-gauss">
+                        <h3>Metode Gauss-Jordan</h3>
+                        <!--Pengenalan Metode Gauss Jordan-->
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto omnis dolor molestiae aperiam repudiandae accusantium, iure quibusdam debitis suscipit similique eaque incidunt harum voluptatibus sit quis fuga minima quidem earum.
+                        </p>
+                        <!--Masalah EGJ-->
+                        <img src="" alt="ontoh Masalah Eliminasi Gauss-Jordan">
+                    </div>
+                </article>
+                <article class="egj">
+                    <h2>Eliminasi Gauss-Jordan</h2>
+                    <!--Penjelasan Gauss-Jordan-->
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur odio debitis necessitatibus sint! Unde ipsa, cupiditate, saepe molestias sed facilis facere culpa, maxime odio alias asperiores. Exercitationem assumenda illo officiis!
                     </p>
                     <!--Masalah EGJ-->
-                    <img src="" alt="ontoh Masalah Eliminasi Gauss-Jordan">
-                </div>
-            </article>
-            <article class="egj">
-                <h2>Eliminasi Gauss-Jordan</h2>
-                <!--Penjelasan Gauss-Jordan-->
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur odio debitis necessitatibus sint! Unde ipsa, cupiditate, saepe molestias sed facilis facere culpa, maxime odio alias asperiores. Exercitationem assumenda illo officiis!
-                </p>
-                <!--Masalah EGJ-->
-                <img src="" alt="Contoh Masalah Eliminasi Gauss-Jordan">
-                <!--Macam Macam Gauss Jordan-->
-                <div class="elim-gauss">
-                    <h3>Eliminasi Gauss</h3>
-                    <!--Penjelasan Eliminasi Gauss-->
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem error culpa voluptatum ipsum quam, unde architecto facilis nisi id maxime a placeat quia labore illum repudiandae velit! Deserunt, repellendus esse.
-                    </p>
-                    <!--Ilustrasi-->
-                    <div class="ilustrasi-metode-gauss">
-                        <ul>
-                            <!--Operasi dapat disesuaikan sesuai kompleksitas soal-->
-                            <li>Bentuk Matriks</li>
-                            <li>Operasi 1</li>
-                            <li>Operasi 2</li>
-                        </ul>
-                        <!--Penjelasan Ilustrasi Metode Gauss-->
+                    <img src="" alt="Contoh Masalah Eliminasi Gauss-Jordan">
+                    <!--Macam Macam Gauss Jordan-->
+                    <div class="elim-gauss">
+                        <h3>Eliminasi Gauss</h3>
+                        <!--Penjelasan Eliminasi Gauss-->
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolor voluptatibus quasi odio beatae earum nostrum, aperiam perspiciatis dolore unde veritatis magnam blanditiis ipsa, iusto, corrupti quod quia quos maiores!
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem error culpa voluptatum ipsum quam, unde architecto facilis nisi id maxime a placeat quia labore illum repudiandae velit! Deserunt, repellendus esse.
                         </p>
-                        <img src="" alt="Ilustrasi Metode Gauss">
+                        <!--Ilustrasi-->
+                        <div class="ilustrasi-metode-gauss">
+                            <ul>
+                                <!--Operasi dapat disesuaikan sesuai kompleksitas soal-->
+                                <li class="first">Bentuk Matriks</li>
+                                <li class="second">Operasi 1</li>
+                                <li class="third">Operasi 2</li>
+                            </ul>
+                            <!--Penjelasan Ilustrasi Metode Gauss-->
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolor voluptatibus quasi odio beatae earum nostrum, aperiam perspiciatis dolore unde veritatis magnam blanditiis ipsa, iusto, corrupti quod quia quos maiores!
+                            </p>
+                            <div class="eg-ilus">
+                                <img src="" alt="Ilustrasi Metode Gauss">
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="elim-gauss-jordan">
-                    <h3>Eliminasi Gauss Jordan</h3>
-                    <!--Penjelasan Eliminasi Gauss Jordan-->
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa adipisci laboriosam dolor, fugit officia vero modi, blanditiis iure qui id ut dolorem consequuntur ad voluptate ducimus accusantium aspernatur, architecto repellendus.
-                    </p>
-                    <div class="ilustrasi-metode-gauss-jordan">
-                        <ul>
-                            <!--Operasi dapat disesuaikan sesuai kompleksitas soal-->
-                            <li>Bentuk Matriks</li>
-                            <li>Operasi 1</li>
-                            <li>Operasi 2</li>
-                        </ul>
-                        <!--Penjelasan Ilustrasi Metode Gauss Jordan-->
+                    <div class="elim-gauss-jordan">
+                        <h3>Eliminasi Gauss Jordan</h3>
+                        <!--Penjelasan Eliminasi Gauss Jordan-->
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolor voluptatibus quasi odio beatae earum nostrum, aperiam perspiciatis dolore unde veritatis magnam blanditiis ipsa, iusto, corrupti quod quia quos maiores!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa adipisci laboriosam dolor, fugit officia vero modi, blanditiis iure qui id ut dolorem consequuntur ad voluptate ducimus accusantium aspernatur, architecto repellendus.
                         </p>
-                        <img src="" alt="Ilustrasi Metode Gauss">
+                        <div class="ilustrasi-metode-gauss-jordan">
+                            <ul>
+                                <!--Operasi dapat disesuaikan sesuai kompleksitas soal-->
+                                <li>Bentuk Matriks</li>
+                                <li>Operasi 1</li>
+                                <li>Operasi 2</li>
+                            </ul>
+                            <!--Penjelasan Ilustrasi Metode Gauss Jordan-->
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolor voluptatibus quasi odio beatae earum nostrum, aperiam perspiciatis dolore unde veritatis magnam blanditiis ipsa, iusto, corrupti quod quia quos maiores!
+                            </p>
+                            <div class="egj-ilus">
+                                <img src="" alt="Ilustrasi Metode Gauss">
+                            </div>
+                        </div>
                     </div>
+                    <!--Kesimpulan-->
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias corporis aut atque nulla dignissimos minima eligendi perferendis, cumque dolorem, facere exercitationem deleniti facilis tempora molestiae eius placeat veniam nobis. Porro?
+                    </p>
+                </article>
+                <div class="button">
+                    <button class="quiz-btn">Quiz Bab 1</button>
                 </div>
-                <!--Kesimpulan-->
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias corporis aut atque nulla dignissimos minima eligendi perferendis, cumque dolorem, facere exercitationem deleniti facilis tempora molestiae eius placeat veniam nobis. Porro?
-                </p>
             </article>
             <aside>
                 <div class="bab-funfact">
                     <h2>Persamaan Linier</h2>
-                    <figure>
-                        <img src="" alt="Bentuk Dasar Persamaan Linier">
-                        <figcaption>Bentuk Dasar Persamaan Linier</figcaption>
-                    </figure>
+                    <div class="img-box">
+                        <figure>
+                            <img src="img/standard-form.png" alt="Bentuk Dasar Persamaan Linier">
+                            <figcaption>Bentuk Dasar Persamaan Linier</figcaption>
+                        </figure>
+                    </div>
                     <p>
                         Konsep persamaan linear dapat ditelusuri kembali ke peradaban kuno. 
-                        Orang Mesir kuno, sekitar tahun 1800 SM, menggunakan bentuk persamaan linear untuk menyelesaikan masalah terkait luas tanah dan perpajakan.
-                        Mereka menggunakan metode geometri untuk menyelesaikan persamaan ini, dan solusinya sering kali direpresentasikan secara grafis.
+                        Orang Mesir kuno, sekitar tahun 1800 SM, menggunakan bentuk persamaan linear untuk menyelesaikan masalah terkait luas tanah dan perpajakan.<br>
+                        Mereka menggunakan metode geometri untuk menyelesaikan persamaan ini, dan solusinya sering kali direpresentasikan secara grafis.<br>
                         Jadi, persamaan linear memiliki sejarah yang kaya dan telah digunakan oleh peradaban untuk menyelesaikan masalah praktis selama ribuan tahun.
                     </p>
                 </div>
             </aside>
         </main>
         <footer>
-            <p class="foot-class">Copyright © 2023, Tjokorde Gde Agung Abel Putra</p>
+            <p>Copyright © 2024, Tjokorde Gde Agung Abel Putra</p>
             <div class="social-media">
                 <ul>
                     <li>
