--- a/Materi/Bab1/bab1.html
+++ b/Materi/Bab1/bab1.html
@@ -72,7 +72,7 @@
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, temporibus possimus, sint quia impedit aut qui totam eligendi veniam quo, ipsam dolores excepturi minima obcaecati saepe consectetur repudiandae. Eaque, magnam.
                             </p>
-                            <!--Ilustrasi Metode Grafik-->
+                            <!--Ilustrasi Metode Eliminasi-->
                             <div class="ilustrasi-metode-eliminasi">
                                 <ul>
                                     <li id="first-elim">Menyamakan Koefisien</li>
@@ -97,12 +97,12 @@
                             <!--Ilustrasi Dari Metode Grafik-->
                             <div class="ilustrasi-metode-grafik">
                                 <ul>
-                                    <li class="first">Mencari Titik Potong</li>
-                                    <li class="second">Membuat Grafik</li>
-                                    <li class="third">Mengimpretasikan Grafik</li>
+                                    <li id="first-graph">Mencari Titik Potong</li>
+                                    <li id="second-graph">Membuat Grafik</li>
+                                    <li id="third-graph">Mengimpretasikan Grafik</li>
                                 </ul>
                                 <!--Penjelasan Ilustrasi-->
-                                <p>
+                                <p id="exp-graph">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus minus! Quasi tenetur omnis, commodi voluptatibus porro cupiditate non. Consequatur placeat vero aperiam quam. Ratione voluptatum voluptas quaerat id obcaecati.
                                 </p>
                                 <div class="ilus-img">
@@ -117,7 +117,9 @@
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto omnis dolor molestiae aperiam repudiandae accusantium, iure quibusdam debitis suscipit similique eaque incidunt harum voluptatibus sit quis fuga minima quidem earum.
                             </p>
                             <!--Masalah EGJ-->
-                            <img src="" alt="ontoh Masalah Eliminasi Gauss-Jordan">
+                            <div class="egj-eximg">
+                                <img src="img/egj-eq.png" alt="ontoh Masalah Eliminasi Gauss-Jordan">
+                            </div>
                         </div>
                     </article>
                     <article class="egj">
@@ -127,7 +129,13 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur odio debitis necessitatibus sint! Unde ipsa, cupiditate, saepe molestias sed facilis facere culpa, maxime odio alias asperiores. Exercitationem assumenda illo officiis!
                         </p>
                         <!--Masalah EGJ-->
-                        <img src="" alt="Contoh Masalah Eliminasi Gauss-Jordan">
+                        <div class="egj-prob">
+                            <img src="img/egj-eq.png" alt="Contoh Masalah Eliminasi Gauss-Jordan">
+                        </div>
+                        <!--Jelasin Perbedaan EG dan EGJ-->
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus nesciunt quos sequi odio, odit obcaecati deleniti reprehenderit mollitia blanditiis ducimus eos distinctio labore accusamus ipsam libero placeat similique voluptas! Illo.
+                        </p>
                         <!--Macam Macam Gauss Jordan-->
                         <div class="elim-gauss">
                             <h3>Eliminasi Gauss</h3>
@@ -139,12 +147,12 @@
                             <div class="ilustrasi-metode-gauss">
                                 <ul>
                                     <!--Operasi dapat disesuaikan sesuai kompleksitas soal-->
-                                    <li class="first">Bentuk Matriks</li>
-                                    <li class="second">Operasi 1</li>
-                                    <li class="third">Operasi 2</li>
+                                    <li id="first-g">Bentuk Matriks</li>
+                                    <li id="second-g">Operasi 1</li>
+                                    <li id="third-g">Operasi 2</li>
                                 </ul>
                                 <!--Penjelasan Ilustrasi Metode Gauss-->
-                                <p>
+                                <p id="exp-eg">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolor voluptatibus quasi odio beatae earum nostrum, aperiam perspiciatis dolore unde veritatis magnam blanditiis ipsa, iusto, corrupti quod quia quos maiores!
                                 </p>
                                 <div class="eg-ilus">
@@ -161,12 +169,12 @@
                             <div class="ilustrasi-metode-gauss-jordan">
                                 <ul>
                                     <!--Operasi dapat disesuaikan sesuai kompleksitas soal-->
-                                    <li>Bentuk Matriks</li>
-                                    <li>Operasi 1</li>
-                                    <li>Operasi 2</li>
+                                    <li id="first-gj">Bentuk Matriks</li>
+                                    <li id="second-gj">Operasi 1</li>
+                                    <li id="third-gj">Operasi 2</li>
                                 </ul>
                                 <!--Penjelasan Ilustrasi Metode Gauss Jordan-->
-                                <p>
+                                <p id="exp-egj">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolor voluptatibus quasi odio beatae earum nostrum, aperiam perspiciatis dolore unde veritatis magnam blanditiis ipsa, iusto, corrupti quod quia quos maiores!
                                 </p>
                                 <div class="egj-ilus">
