feat: menyelesaikan sisa ilustrasi

--- a/Materi/Bab1/bab1.html
+++ b/Materi/Bab1/bab1.html
@@ -150,12 +150,14 @@
                                     <li id="first-g">Bentuk Matriks</li>
                                     <li id="second-g">Operasi 1</li>
                                     <li id="third-g">Operasi 2</li>
+                                    <li id="fourth-g">Operasi 3</li>
+                                    <li id="fifth-g">Subtitusi</li>
                                 </ul>
                                 <!--Penjelasan Ilustrasi Metode Gauss-->
                                 <p id="exp-eg">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolor voluptatibus quasi odio beatae earum nostrum, aperiam perspiciatis dolore unde veritatis magnam blanditiis ipsa, iusto, corrupti quod quia quos maiores!
                                 </p>
-                                <div class="eg-ilus">
+                                <div class="eg-ilus-img">
                                     <img src="" alt="Ilustrasi Metode Gauss">
                                 </div>
                             </div>
@@ -172,12 +174,14 @@
                                     <li id="first-gj">Bentuk Matriks</li>
                                     <li id="second-gj">Operasi 1</li>
                                     <li id="third-gj">Operasi 2</li>
+                                    <li id="fourth-gj">Operasi 3</li>
+                                    <li id="fifth-gj">Operasi 4</li>
                                 </ul>
                                 <!--Penjelasan Ilustrasi Metode Gauss Jordan-->
                                 <p id="exp-egj">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolor voluptatibus quasi odio beatae earum nostrum, aperiam perspiciatis dolore unde veritatis magnam blanditiis ipsa, iusto, corrupti quod quia quos maiores!
                                 </p>
-                                <div class="egj-ilus">
+                                <div class="egj-ilus-img">
                                     <img src="" alt="Ilustrasi Metode Gauss">
                                 </div>
                             </div>
