feat: latihan soal

--- a/Materi/Bab1/bab1.html
+++ b/Materi/Bab1/bab1.html
@@ -186,10 +186,98 @@
                                 </div>
                             </div>
                         </div>
-                        <!--Kesimpulan-->
+                        <!--Persamaan tidak konsisten dan penyelesaian bebas-->
+                        <h3>Persamaan Tidak Konsisten dan Penyelesaian Tak Terbatas</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias corporis aut atque nulla dignissimos minima eligendi perferendis, cumque dolorem, facere exercitationem deleniti facilis tempora molestiae eius placeat veniam nobis. Porro?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, ut aliquid sit quisquam similique, earum perferendis ab asperiores nisi iste in officiis, consectetur enim expedita id voluptates debitis ipsa illo?
                         </p>
+                    </article>
+                    <h2>Kesimpulan</h2>
+                    <!--Kesimpulan-->
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias corporis aut atque nulla dignissimos minima eligendi perferendis, cumque dolorem, facere exercitationem deleniti facilis tempora molestiae eius placeat veniam nobis. Porro?
+                    </p>
+                    <article class="latsol">
+                    <h2>Latihan Soal</h2>
+                    <p>Latihan Soal berupa 2 soal pilihan ganda dan 2 soal essay. Latihan ini tidak memiliki sistem benar atau salah, melainkan menggunakan pembahasan. Pencet tombol plus untuk melihat pembahasan.</p>
+                    <div class="pg-1">
+                        <div class="soal-pg-1">
+                            <h3>Pilihan Ganda 1 </h3>
+                            <p>Cari nilai a,b,dan c menggunakan Gauss-Jordan</p>
+                            <div class="img-pg1">
+                                <img src="img/latsol/pg1.png" alt="Pilihan Ganda 1">
+                            </div>
+                            <div class="pg1-opt">
+                                <ol>
+                                    <li>a = 1, b = 2, c = 3</li>
+                                    <li>a = 2, b = 3, c = 1</li>
+                                    <li>a = 0, b = 0, c = 1</li>
+                                    <li>a = 3, b = 0, c = -1</li>
+                                    <li>Tidak konsisten</li>
+                                </ol>
+                            </div>
+                        </div>
+                        <div class="plus-btn">
+                            <i class="fas fa-plus" id="pem-pg1-btn"></i>
+                        </div>
+                        <div class="pembahasan-pg1" id="pg1-dis">
+                            <img src="img/latsol/sol-pg1.png" alt="Pembahasan Pilihan Ganda 1">
+                        </div>
+                    </div>
+                    <div class="pg-2">
+                        <div class="soal-pg-2">
+                            <h3>Pilihan Ganda 2</h3>
+                            <p>Cari nilai X<sub>1</sub>,X<sub>2</sub>,dan X<sub>3</sub> menggunakan Gauss-Jordan</p>
+                            <div class="img-pg2">
+                                <img src="img/latsol/pg2.png" alt="Pilihan Ganda 2">
+                            </div>
+                            <div class="pg2-opt">
+                                <ol>
+                                    <li>X<sub>1</sub> = 3, X<sub>2</sub> = 1, X<sub>3</sub> = 3/2</li>
+                                    <li>X<sub>1</sub> = -1/7, X<sub>2</sub> = 1/7, X<sub>3</sub> = 0</li>
+                                    <li>X<sub>1</sub> = 2/3, X<sub>2</sub> = 4, X<sub>3</sub> = 7</li>
+                                    <li>X<sub>1</sub> = -3, X<sub>2</sub> = 5/2, X<sub>3</sub> = -2</li>
+                                    <li>X<sub>1</sub> = 0, X<sub>2</sub> = 1, X<sub>3</sub> = 1 </li>
+                                </ol>
+                            </div>
+                        </div>
+                        <div class="plus-btn">
+                            <i class="fas fa-plus" id="pem-pg2-btn"></i>
+                        </div>
+                        <div class="pembahasan-pg2" id="pg2-dis">
+                            <img src="img/latsol/sol-pg2.png" alt="Pembahasan Pilihan Ganda 2">
+                        </div>
+                    </div>
+                    <div class="es-1">
+                        <div class="soal-ess-1">
+                            <h3>Essai 1</h3>
+                            <p>Cari nilai x,y,z,dan w menggunakan Gauss-Jordan</p>
+                            <div class="img-ess1">
+                                <img src="img/latsol/ess1.png" alt="Essai 1">
+                            </div>
+                        </div>
+                        <div class="plus-btn">
+                            <i class="fas fa-plus" id="pem-ess1-btn"></i>
+                        </div>
+                        <div class="pembahasan-pg3" id="ess1-dis">
+                            <img src="img/latsol/sol-ess1.png" alt="Pembahasan Essai">
+                        </div>
+                    </div>
+                    <div class="es-2">
+                        <div class="soal-ess-2">
+                            <h3>Essai 2</h3>
+                            <p>Cari harga dari perunggu, tembaga, dan besi per kilogram menggunakan Gauss-Jordan</p>
+                            <div class="img-ess2">
+                                <img src="img/latsol/ess2.png" alt="Essai 2">
+                            </div>
+                        </div>
+                        <div class="plus-btn">
+                            <i class="fas fa-plus" id="pem-ess2-btn"></i>
+                        </div>
+                        <div class="pembahasan-ess2" id="ess2-dis">
+                            <img src="img/latsol/sol-ess2.png" alt="Pembahasan Essai 2">
+                        </div>
+                    </div>
                     </article>
                     <div class="button">
                         <button class="quiz-btn">Quiz Bab 1</button>
