feat: picture redrawn + egj illustration fix

--- a/Materi/Bab1/bab1.html
+++ b/Materi/Bab1/bab1.html
@@ -176,6 +176,7 @@
                                     <li id="third-gj">Operasi 2</li>
                                     <li id="fourth-gj">Operasi 3</li>
                                     <li id="fifth-gj">Operasi 4</li>
+                                    <li id="sixth-gj">Operasi 5</li>
                                 </ul>
                                 <!--Penjelasan Ilustrasi Metode Gauss Jordan-->
                                 <p id="exp-egj">
