feat: responsive layout

--- a/Materi/Bab1/bab1.html
+++ b/Materi/Bab1/bab1.html
@@ -2,6 +2,7 @@
     <html>
         <head>
             <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <title>Bab 1 Eliminasi Gauss Jordan</title>
             <!--CSS-->
             <link rel="stylesheet" href="style/bab1style.css">
@@ -35,7 +36,14 @@
                 <aside>
                     <div class="daftar-bab">
                         <ul>
-                            <li><a href="bab1.html">Bab 1 Eliminasi Gauss Jordan</a></li>
+                            <li><a href="bab1.html">Eliminasi Gauss Jordan</a></li>
+                            <li><a href="#">Determinan Matriks</a></li>
+                            <li><a href="#">Vektor di Ruang Euclidian</a></li>
+                            <li><a href="#">Vektor di Ruang Umum</a></li>
+                            <li><a href="#">Eigenvalue dan Eigenvector</a></li>
+                            <li><a href="#">Perkalian Dalam</a></li>
+                            <li><a href="#">Digaonalisasi dan Bentuk Kuadrat</a></li>
+                            <li><a href="#">Transformasi Linear</a></li>
                         </ul>
                     </div>
                 </aside>
@@ -97,9 +105,9 @@
                             <!--Ilustrasi Dari Metode Grafik-->
                             <div class="ilustrasi-metode-grafik">
                                 <ul>
-                                    <li id="first-graph">Mencari Titik Potong</li>
+                                    <li id="first-graph">Titik Potong</li>
                                     <li id="second-graph">Membuat Grafik</li>
-                                    <li id="third-graph">Mengimpretasikan Grafik</li>
+                                    <li id="third-graph">Mengimpretasikan</li>
                                 </ul>
                                 <!--Penjelasan Ilustrasi-->
                                 <p id="exp-graph">
@@ -268,8 +276,15 @@
                         <div class="soal-ess-2">
                             <h3>Essai 2</h3>
                             <p>Cari harga dari perunggu, tembaga, dan besi per kilogram menggunakan Gauss-Jordan</p>
-                            <div class="img-ess2">
-                                <img src="img/latsol/ess2.png" alt="Essai 2">
+                            <div class="txt-ess2">
+                                <p>Sebuah perusahaan pertambangan mengumumkan hasil laporan keuangan selama 3
+                                    bulan terakhir. Pada bulan Januari, hasil tambangnya meliputi 300kg perunggu,
+                                    200kg tembaga, dan 400kg besi dengan pendapatan sebesar $140000. Pada bulan
+                                    Februari, jumlahnya adalah 200kg perunggu, 500kg tembaga, dan 300kg besi dengan
+                                    pendapatan sebesar $135.000. Sedangkan pada bulan Maret, terdapat 100kg
+                                    perunggu, 100kg tembaga, dan 200kg besi dengan pendapatan sebesar $60.000.
+                                    Dari data tersebut, berapa harga perunggu, tembaga, dan besi per kilogram
+                                </p>
                             </div>
                         </div>
                         <div class="plus-btn">
