--- a/Landing Page/landingpage.html
+++ b/Landing Page/landingpage.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Matrix Mind</title>
         <!--CSS-->
         <link rel="stylesheet" href="style/style.css">
 
